# passgen-cmd

./: Cargo.toml  README.md  README.ru.md  build.rs
src/: main.rs
