[package]
name = "passgen-cmd"
version = "1.1.0"
edition = "2021"
rust-version = "1.83"
license = "MIT"
description = "Cross-platform tool for generating cryptographically secure passwords/tokens and other sets and sequences."
readme = "README.md"
authors = ["Mamontov Konstantin <k@mamont.xyz>"]
homepage = "https://github.com/mammothcoding/passgen-cmd"
repository = "https://github.com/mammothcoding/passgen-cmd"
keywords = ["generator", "password", "token", "crypto-resistant", "console-tool"]
categories = ["authentication", "cryptography", "command-line-utilities"]
exclude = [".*"]

[dependencies]
passgen-lib = "1.1"
clap = { version = "4.5.23", features = ["cargo"] }
clap_derive = "4.5.18"

# Reduce the size of the executable  file:
[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = 'abort'
strip = true

[build-dependencies]
windows_exe_info = "0.4.2"
